k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-backend
  namespace: calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc-backend
  template:
    metadata:
      labels:
        app: calc-backend
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: backend
          image: ghcr.io/ivnkarpenko/calc-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
