k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-frontend
  namespace: calc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calc-frontend
  template:
    metadata:
      labels:
        app: calc-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ivnkarpenko/calc-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
